--- a/perfil_professores.html
+++ b/perfil_professores.html
@@ -1,1 +1,36 @@
-
+<html>
+	<head>
+		<title>Perfil de Professores</title>
+		<link rel="stylesheet" href="style_prof.css">
+		 <script type="text/javascript" src="altera_perfil.js"></script>
+	</head>
+	<body>
+		<nav id='menu'>
+			<ul>
+				<li><a href='../Site/Aula31-03.html'>Home</a></li>
+				<li><a href="../Site/Estudantes.html">Alunos</a></li>
+				<li><a href='../Site/Professores.html'>Professor</a></li>
+				<li><a href=''>Entrar</a></li>
+			</ul>
+		</nav>
+    <nav class='menu-lateral'>
+      <form class='botoes'>
+        <button type='button' idd='perfil-Jonatas'>Prof. Jonatas</button>
+        <button type='button' idd='perfil-Edilene'>Prof. Edilene</button>
+        <button type='button' idd='perfil-Marcia'>Prof.Marica</button> 
+        <button type='button' idd='perfil-Josefat'>Prof. Josefat</button>
+        <button type='button' idd='perfil-Sandra'>Prof. Sandra</button>
+        <button type='button' idd='perfil-Joaquina'>Prof. Sirlene</button>
+        <button type='button' idd='perfil-Sirlene'>Prof. Sirlene</button>
+      </form>
+    </nav>
+    <div class='perfil'>
+              <h1 id='nome'>Nome Professor</h1>
+              <img id='foto-perfil' class='foto-perfil' scr='../Projetofinal/peril'-vazio.png'>
+              <h4 id='data_nasc'>Data de Nascimento</h4>
+              <h4 id='materia'>Materias</h4>  
+              <h4 id='tmp_atvd'>tempo de Atividades</h4>
+              <h4 id='graducao'>Graduação</h4>
+              <img class='chapa-parcas'scr='../pr                   
+  </body>
+</html>
